--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
         "bootstrap-icons": "^1.11.3",
         "feather-icons": "^4.29.2",
         "jquery": "^3.7.1",
-        "nouislider": "^15.8.1",
-        "sass": "^1.80.4",
+        "quill": "^2.0.2",
         "simplebar": "^6.2.7",
         "slick-carousel": "^1.8.1",
         "tiny-slider": "^2.9.4",
