--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "bootstrap": "^5.3.3",
         "bootstrap-icons": "^1.11.3",
         "feather-icons": "^4.29.2",
+        "flatpickr": "^4.6.13",
         "jquery": "^3.7.1",
         "quill": "^2.0.2",
         "simplebar": "^6.2.7",
